--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samarth</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <div id="wrapper">
         <div id="main">
             <h3>Coming<br>Soon</h3>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 </body>
 
 </html>
