--- a/index.html
+++ b/index.html
@@ -3,17 +3,87 @@
 <html lang="en">
 
 <head>
+    <title>Samarth</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samarth</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="src/style.css">
     <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Sαмαятн Website | Web Development project.">
+    <meta itemprop="name" content="Sem 4 MateriaL">
+    <meta itemprop="description" content="Sαмαятн Website | Web Development project.">
+    <meta itemprop="image" content="src/meta.jpg">
+    <meta content="Sαмαятн Website" property="og:site_name">
+    <meta property="og:type" content="Sαмαятн">
+    <meta content="Sem 4 MateriaL" property="og:title">
+    <meta content="src/meta.jpg" property="og:image">
+    <meta content="Sαмαятн Website | Web Development project." property="og:description">
 </head>
 
 <body oncontextmenu="return false">
-    <div id="wrapper">
-        <div id="main">
-            <h3>Coming<br>Soon</h3>
+    <div id="main">
+        <div id="page1">
+            <h1> ~ Sem 4 MateriaL ~ </h1>
+            <div id="space"></div>
+            <a href="#" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor"></path>
+                    </svg>
+                    Analysis Design Of Algorithm</span>
+            </a>
+            <div id="space"></div>
+            <a href="#" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor"></path>
+                    </svg>
+                    Software Engineering</span>
+            </a>
+            <div id="space"></div>
+            <a href="#" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor"></path>
+                    </svg>
+                    Computer Org. & Architecture</span>
+            </a>
+            <div id="space"></div>
+            <a href="#" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor"></path>
+                    </svg>
+                    Operating System</span>
+            </a>
+            <div id="space"></div>
+            <a href="#" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor"></path>
+                    </svg>
+                    Programming Practices</span>
+            </a>
+            <div id="space"></div>
+            <div id="space"></div>
+            <h2> ~ Updated at ? ~ </h2>
+            <h3>
+                ~ Report
+                <a href="https://riotoreo.t.me" target="_blank">he</a><a href="https://t.me/riotoreo" target="_blank">re</a>
+                if error
+                found. ~
+            </h3>
+            <h2></h2>
         </div>
     </div>
     <script src="src/app.js"></script>
