--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="space"></div>
             <h1> ~ Sem 4 MateriaL ~ </h1>
             <div id="space"></div>
-            <a href="#" class="cssbuttons-io">
+            <a href="/ADA/index.html" class="cssbuttons-io">
                 <span>
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
@@ -49,7 +49,7 @@
                 </span>
             </a>
             <div id="space"></div>
-            <a href="#" class="cssbuttons-io">
+            <a href="/SE/README.md" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -59,7 +59,7 @@
                     Software Engineering</span>
             </a>
             <div id="space"></div>
-            <a href="#" class="cssbuttons-io">
+            <a href="/COA/README.md" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -69,7 +69,7 @@
                     Computer Org. & Architecture</span>
             </a>
             <div id="space"></div>
-            <a href="#" class="cssbuttons-io">
+            <a href="/OS/README.md" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -79,7 +79,7 @@
                     Operating System</span>
             </a>
             <div id="space"></div>
-            <a href="#" class="cssbuttons-io">
+            <a href="/PP/README.md" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
