--- a/COA/index.html
+++ b/COA/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADA MateriaL</title>
+    <title>COA MateriaL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
