--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div id="page1">
             <div id="space"></div>
             <div id="space"></div>
+            <div id="space"></div>
+            <div id="space"></div>
             <div class="image">
                 <div class="hover">
                     <i class="fa-solid fa-dice-d20 fa-spin"></i>
@@ -34,10 +36,9 @@
             <div id="space"></div>
             <div id="space"></div>
             <div id="space"></div>
-            <div id="space"></div>
             <h1> ~ Sem 4 MateriaL ~ </h1>
             <div id="space"></div>
-            <a href="/ADA/index.html" class="cssbuttons-io">
+            <a href="/ADA/" class="cssbuttons-io">
                 <span>
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
@@ -45,11 +46,11 @@
                             d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
                             fill="currentColor"></path>
                     </svg>
-                    Analysis Design Of Algorithm
+                    AnaLysis Design Of ALgorithm
                 </span>
             </a>
             <div id="space"></div>
-            <a href="/SE/README.md" class="cssbuttons-io">
+            <a href="/SE/" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -59,7 +60,7 @@
                     Software Engineering</span>
             </a>
             <div id="space"></div>
-            <a href="/COA/README.md" class="cssbuttons-io">
+            <a href="/COA/" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -69,7 +70,7 @@
                     Computer Org. & Architecture</span>
             </a>
             <div id="space"></div>
-            <a href="/OS/README.md" class="cssbuttons-io">
+            <a href="/OS/" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -79,7 +80,7 @@
                     Operating System</span>
             </a>
             <div id="space"></div>
-            <a href="/PP/README.md" class="cssbuttons-io">
+            <a href="/PP/" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -103,8 +104,8 @@
             <h2> ~ Updated at ? ~ </h2>
             <h3>
                 ~ Report
-                <a class="report" href="https://riotoreo.t.me" target="_blank">he</a><a class="report"
-                href="https://t.me/riotoreo" target="_blank">re</a>
+                <a class="report" href="https://riotoreo.t.me" target="_blank">M</a><a class="report"
+                    href="https://t.me/riotoreo" target="_blank">E</a>
                 if error
                 found. ~
             </h3>
