--- a/OS/index.html
+++ b/OS/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OS MateriaL</title>
+    <link rel="shortcut icon" href="../src/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <title>OS MateriaL</title>
 </head>
 
 <body>
     <div id="main">
+        <div id="nav">
+            <h1> ~ OS PracticaLs ~ </h1>
+        </div>
         <div id="page1">
-            <h1>Coming<br>Soon</h1>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
