--- a/OS/index.html
+++ b/OS/index.html
@@ -11,13 +11,10 @@
 
 <body>
     <div id="main">
-        <div id="nav">
-            <h1> ~ OS PracticaLs ~ </h1>
-        </div>
         <div id="page1">
+            <h1>Coming<br>Soon</h1>
         </div>
     </div>
-    <script src="app.js"></script>
 </body>
 
 </html>
