--- a/OS/index.html
+++ b/OS/index.html
@@ -5,16 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../src/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="../src/button.css">
     <title>OS MateriaL</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
+    <div id="nav">
+        <h1> ~ OS PracticaLs ~ </h1>
+    </div>
+    <div id="space"></div>
+    <div id="space"></div>
+    <div id="space"></div>
+    <div id="space"></div>
+    <div id="space"></div>
+    <div id="space"></div>
     <div id="main">
         <div id="page1">
-            <h1>Coming<br>Soon</h1>
+            </a>
+            <div id="space"></div>
+            <a href="#Nothing" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor">
+                        </path>
+                    </svg>
+                    Experiment 1
+                </span>
+            </a>
+            <div id="space"></div>
+            <a href="#Nothing" class="cssbuttons-io">
+                <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
+                            fill="currentColor">
+                        </path>
+                    </svg>
+                    Coming Soon
+                </span>
+            </a>
+            <div id="space"></div>
+            <!-- <img src="../src/meta.jpg" alt="image"> -->
         </div>
     </div>
+    <script src="src/app.js"></script>
 </body>
 
 </html>
