--- a/COA/index.html
+++ b/COA/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <div id="main">
         <div id="page1">
             <h1>Coming<br>Soon</h1>
