--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     Computer Org. & Architecture</span>
             </a>
             <div id="space"></div>
-            <a href="/OS/" class="cssbuttons-io">
+            <a href="https://github.com/FlashXT/sem4/blob/main/OS/codes/README.md" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
