--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="space"></div>
             <h1> ~ Sem 4 MateriaL ~ </h1>
             <div id="space"></div>
-            <a href="/ADA/" class="cssbuttons-io">
+            <a href="#ada" class="cssbuttons-io">
                 <span>
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
@@ -50,7 +50,7 @@
                 </span>
             </a>
             <div id="space"></div>
-            <a href="/SE/" class="cssbuttons-io">
+            <a href="#se" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -60,7 +60,7 @@
                     Software Engineering</span>
             </a>
             <div id="space"></div>
-            <a href="/COA/" class="cssbuttons-io">
+            <a href="#coa" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
@@ -80,7 +80,7 @@
                     Operating System</span>
             </a>
             <div id="space"></div>
-            <a href="/PP/" class="cssbuttons-io">
+            <a href="#pp" class="cssbuttons-io">
                 <span><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"></path>
                         <path
