--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
             <div id="space"></div>
             <div id="space"></div>
-            <h2> ~ Updated at ? ~ </h2>
+            <h2> ~ Updated at 13-May-2025 | 11 PM ~ </h2>
             <h3>
                 ~ Report
                 <a class="report" href="https://riotoreo.t.me" target="_blank">M</a><a class="report"
