os program 8 added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                             d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z"
                             fill="currentColor"></path>
                     </svg>
-                    Software Engineering</span>
+                    Software Engineering
+                </span>
             </a>
             <div id="space"></div>
             <a href="#coa" class="cssbuttons-io">
@@ -101,7 +102,7 @@
             </a>
             <div id="space"></div>
             <div id="space"></div>
-            <h2> ~ Updated at 13-May-2025 | 11 PM ~ </h2>
+            <h2> ~ Updated at 25-May-2025 | 3 PM ~ </h2>
             <h3>
                 ~ Report
                 <a class="report" href="https://riotoreo.t.me" target="_blank">M</a><a class="report"
