--- a/index.html
+++ b/index.html
@@ -102,13 +102,12 @@
             </a>
             <div id="space"></div>
             <div id="space"></div>
-            <h2> ~ Updated at 28-May-2025 | 5 AM ~ </h2>
+            <h2> ~ Updated at 09-June-2025 | 11 PM ~ </h2>
             <h3>
                 ~ Report
                 <a class="report" href="https://riotoreo.t.me" target="_blank">M</a><a class="report"
                     href="https://t.me/riotoreo" target="_blank">E</a>
-                if error
-                found. ~
+                if error found. ~
             </h3>
             <div id="space"></div>
             <div id="space"></div>
