--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </a>
             <div id="space"></div>
             <div id="space"></div>
-            <h2> ~ Updated at 09-June-2025 | 11 PM ~ </h2>
+            <h2> ~ Updated at 11-June-2025 | 3 AM ~ </h2>
             <h3>
                 ~ Report
                 <a class="report" href="https://riotoreo.t.me" target="_blank">M</a><a class="report"
